--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/notificheStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/notificheStage.fxml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="900.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.NotificheController">
+<AnchorPane prefHeight="744.0" prefWidth="800.0" style="-fx-border-color: #de5f4f; -fx-border-width: 3; -fx-background-color: #fdf3ea;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.NotificheController">
    <children>
-      <ListView fx:id="listViewSerieAcquisto" layoutX="120.0" layoutY="265.0" prefHeight="563.0" prefWidth="659.0">
+      <ListView fx:id="listViewSerieAcquisto" layoutX="66.0" layoutY="163.0" prefHeight="523.0" prefWidth="700.0">
          <contextMenu>
             <ContextMenu>
               <items>
@@ -16,7 +22,17 @@
               </items>
             </ContextMenu>
          </contextMenu></ListView>
-      <Button layoutX="67.0" layoutY="843.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
-      <Button layoutX="223.0" layoutY="53.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="14.0" layoutY="760.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="TRANSPARENT" height="53.0" layoutX="40.0" layoutY="87.0" stroke="#de5f4f" strokeWidth="2.0" width="724.0" />
+      <Text fill="#2b2d30" layoutX="44.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pannello notifiche" wrappingWidth="278.8033332824707">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Text>
+      <Text fill="#2b2d30" layoutX="44.0" layoutY="132.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qui potrai vedere quali delle serie che hai aggiunto ai preferiti sono acquistabili e dove reperirle">
+         <font>
+            <Font name="Arial" size="17.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
