--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/notificheStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/notificheStage.fxml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="744.0" prefWidth="800.0" style="-fx-border-color: #de5f4f; -fx-border-width: 3; -fx-background-color: #fdf3ea;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.NotificheController">
+<AnchorPane prefHeight="800.0" prefWidth="900.0" style="-fx-border-color: #de5f4f; -fx-border-width: 3; -fx-background-color: #fdf3ea;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.NotificheController">
    <children>
       <ListView fx:id="listViewSerieAcquisto" layoutX="66.0" layoutY="163.0" prefHeight="523.0" prefWidth="700.0">
          <contextMenu>
@@ -23,16 +25,27 @@
             </ContextMenu>
          </contextMenu></ListView>
       <Button layoutX="14.0" layoutY="760.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="TRANSPARENT" height="53.0" layoutX="40.0" layoutY="87.0" stroke="#de5f4f" strokeWidth="2.0" width="724.0" />
-      <Text fill="#2b2d30" layoutX="44.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pannello notifiche" wrappingWidth="278.8033332824707">
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="TRANSPARENT" height="55.0" layoutX="65.0" layoutY="86.0" stroke="#de5f4f" strokeWidth="2.0" width="700.0" />
+      <Text fill="#2b2d30" layoutX="72.0" layoutY="111.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pannello notifiche" wrappingWidth="278.8033332824707">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Text>
-      <Text fill="#2b2d30" layoutX="44.0" layoutY="132.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qui potrai vedere quali delle serie che hai aggiunto ai preferiti sono acquistabili e dove reperirle">
+      <Text fill="#2b2d30" layoutX="72.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qui potrai vedere quali delle serie che hai aggiunto ai preferiti sono acquistabili e dove reperirle">
          <font>
-            <Font name="Arial" size="17.0" />
+            <Font name="Arial" size="16.0" />
          </font>
       </Text>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="TRANSPARENT" height="561.0" layoutX="67.0" layoutY="161.0" stroke="#de5f4f" strokeWidth="2.0" width="700.0" />
+      <Text fill="#2b2d30" layoutX="108.0" layoutY="709.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Per vedere le informazioni serie o acquisto o eliminarla dai preferiti premi il tasto destro">
+         <font>
+            <Font name="Arial" size="16.0" />
+         </font>
+      </Text>
+      <ImageView fx:id="imageLibro" fitHeight="50.0" fitWidth="900.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
+         <viewport>
+            <Rectangle2D width="900.0" />
+         </viewport>
+      </ImageView>
    </children>
 </AnchorPane>
