--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStage.fxml
@@ -8,18 +8,25 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="idSearchBar" prefHeight="900.0" prefWidth="900.0" style="-fx-border-color: #de5f4f; -fx-border-width: 3; -fx-background-color: #fdf3ea;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.HomeController">
+<AnchorPane fx:id="idSearchBar" maxHeight="800.0" maxWidth="900.0" minHeight="800.0" minWidth="900.0" prefHeight="800.0" prefWidth="900.0" style="-fx-border-color: #de5f4f; -fx-border-width: 7; -fx-background-color: #fdf3ea;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.HomeController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="TRANSPARENT" height="625.0" layoutX="94.0" layoutY="93.0" stroke="#de5f4f" strokeWidth="2.0" width="704.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="TRANSPARENT" height="57.0" layoutX="97.0" layoutY="25.0" stroke="#de5f4f" strokeWidth="2.0" width="700.0" />
-      <Button layoutX="437.0" layoutY="725.0" mnemonicParsing="false" onAction="#logOff" text="Log off" />
+      <ImageView fx:id="imageLibriSfondo" fitHeight="795.0" fitWidth="900.0" layoutX="3.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../../../../../../Downloads/libri800x900.png" />
+         </image>
+      </ImageView>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcf3eb" height="665.0" layoutX="93.0" layoutY="92.0" stroke="#de5f4f" strokeWidth="2.0" width="706.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcf3eb" height="59.0" layoutX="90.0" layoutY="24.0" stroke="#de5f4f" strokeWidth="2.0" width="708.0" />
+      <Button layoutX="428.0" layoutY="721.0" mnemonicParsing="false" onAction="#logOff" style="-fx-background-color: #2b2d30;" text="Log off" textFill="WHITE" />
       <TextField fx:id="idBarSearch" layoutX="298.0" layoutY="130.0" />
-      <Button defaultButton="true" layoutX="799.0" layoutY="18.0" mnemonicParsing="false" onAction="#goToInfoUser" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Info Utente" textFill="#2b2d30" underline="true">
+      <Button defaultButton="true" layoutX="707.0" layoutY="22.0" mnemonicParsing="false" onAction="#goToInfoUser" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Info Utente" textFill="#2b2d30" underline="true">
          <font>
             <Font size="14.0" />
          </font>
@@ -27,7 +34,7 @@
             <Cursor fx:constant="OPEN_HAND" />
          </cursor>
       </Button>
-      <Button layoutX="607.0" layoutY="130.0" mnemonicParsing="false" onAction="#Select" text="Cerca" />
+      <Button layoutX="607.0" layoutY="130.0" mnemonicParsing="false" onAction="#Select" style="-fx-background-color: #2b2d30;" text="Cerca" textFill="WHITE" />
       <ComboBox fx:id="idComboBox" layoutX="450.0" layoutY="130.0" prefWidth="150.0" />
       <TableView fx:id="libroTableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
         <columns>
@@ -46,8 +53,8 @@
             </ContextMenu>
          </contextMenu>
       </TableView>
-      <Button fx:id="buttonLibro" layoutX="118.0" layoutY="130.0" mnemonicParsing="false" onAction="#selezioneLibro" prefHeight="25.0" prefWidth="58.0" text="Libro" />
-      <Button fx:id="buttonArticolo" layoutX="198.0" layoutY="130.0" mnemonicParsing="false" onAction="#selezioneArticolo" text="Articolo" />
+      <Button fx:id="buttonLibro" layoutX="118.0" layoutY="130.0" mnemonicParsing="false" onAction="#selezioneLibro" prefHeight="25.0" prefWidth="58.0" style="-fx-background-color: #2b2d30;" text="Libro" textFill="WHITE" />
+      <Button fx:id="buttonArticolo" layoutX="198.0" layoutY="130.0" mnemonicParsing="false" onAction="#selezioneArticolo" style="-fx-background-color: #2b2d30;" text="Articolo" textFill="WHITE" />
       <TableView fx:id="articoloTableView" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0" style="-fx-background-insets: red;">
          <columns>
             <TableColumn fx:id="doiColumn" prefWidth="95.9999771118164" text="DOI" />
@@ -66,8 +73,8 @@
       </TableView>
       <Text layoutX="130.0" layoutY="119.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cosa Vuoi ricercare ?" wrappingWidth="136.91082000732422" />
       <Text layoutX="308.0" layoutY="176.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Premi Con Il Tasto Destro Del Mouse Per Le Azioni" wrappingWidth="277.5774459838867" />
-      <Button layoutX="669.0" layoutY="130.0" mnemonicParsing="false" onAction="#clearTableView" text="Clear" />
-      <Button defaultButton="true" layoutX="799.0" layoutY="45.0" mnemonicParsing="false" onAction="#goToNotifiche" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Notifiche Utente" textFill="#2b2d30" underline="true">
+      <Button layoutX="669.0" layoutY="130.0" mnemonicParsing="false" onAction="#clearTableView" style="-fx-background-color: #2b2d30;" text="Clear" textFill="WHITE" />
+      <Button defaultButton="true" layoutX="677.0" layoutY="47.0" mnemonicParsing="false" onAction="#goToNotifiche" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Notifiche Utente" textFill="#2b2d30" underline="true">
          <font>
             <Font size="14.0" />
          </font>
