--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/notificheStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/notificheStage.fxml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="800.0" prefWidth="900.0" style="-fx-border-color: #de5f4f; -fx-border-width: 3; -fx-background-color: #fdf3ea;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.NotificheController">
+<AnchorPane maxHeight="800.0" maxWidth="900.0" minHeight="800.0" minWidth="900.0" prefHeight="800.0" prefWidth="900.0" style="-fx-border-color: #de5f4f; -fx-border-width: 3; -fx-background-color: #fdf3ea;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.NotificheController">
    <children>
+      <ImageView fitHeight="795.0" fitWidth="900.0" layoutX="3.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../../../../../../Downloads/libri800x900.png" />
+         </image>
+      </ImageView>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcf3eb" height="563.0" layoutX="62.0" layoutY="160.0" stroke="#de5f4f" strokeWidth="2.0" width="708.0" />
       <ListView fx:id="listViewSerieAcquisto" layoutX="66.0" layoutY="163.0" prefHeight="523.0" prefWidth="700.0">
          <contextMenu>
             <ContextMenu>
@@ -24,8 +30,8 @@
               </items>
             </ContextMenu>
          </contextMenu></ListView>
-      <Button layoutX="14.0" layoutY="760.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="TRANSPARENT" height="55.0" layoutX="65.0" layoutY="86.0" stroke="#de5f4f" strokeWidth="2.0" width="700.0" />
+      <Button layoutX="14.0" layoutY="760.0" mnemonicParsing="false" onAction="#goBack" style="-fx-background-color: #2b2d30;" text="Back" textFill="WHITE" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fcf3eb" height="55.0" layoutX="65.0" layoutY="86.0" stroke="#de5f4f" strokeWidth="2.0" width="700.0" />
       <Text fill="#2b2d30" layoutX="72.0" layoutY="111.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pannello notifiche" wrappingWidth="278.8033332824707">
          <font>
             <Font name="System Bold" size="24.0" />
@@ -36,16 +42,10 @@
             <Font name="Arial" size="16.0" />
          </font>
       </Text>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="TRANSPARENT" height="561.0" layoutX="67.0" layoutY="161.0" stroke="#de5f4f" strokeWidth="2.0" width="700.0" />
       <Text fill="#2b2d30" layoutX="108.0" layoutY="709.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Per vedere le informazioni serie o acquisto o eliminarla dai preferiti premi il tasto destro">
          <font>
             <Font name="Arial" size="16.0" />
          </font>
       </Text>
-      <ImageView fx:id="imageLibro" fitHeight="50.0" fitWidth="900.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
-         <viewport>
-            <Rectangle2D width="900.0" />
-         </viewport>
-      </ImageView>
    </children>
 </AnchorPane>
