--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStageAdmin.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStageAdmin.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="idSearchBar" maxHeight="800.0" maxWidth="900.0" minHeight="800.0" minWidth="900.0" prefHeight="800.0" prefWidth="900.0" style="-fx-border-color: #de5f4f; -fx-border-width: 3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.HomeControllerAdmin">
+<AnchorPane fx:id="idSearchBar" maxHeight="800.0" maxWidth="900.0" minHeight="800.0" minWidth="900.0" prefHeight="800.0" prefWidth="900.0" style="-fx-border-color: #de5f4f; -fx-border-width: 3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.HomeControllerAdminTest">
     <children>
       <ImageView fx:id="imageLibriSfondo" fitHeight="800.0" fitWidth="895.0" layoutX="2.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -153,22 +153,6 @@
                 <TableColumn fx:id="nomeSerie" onEditCommit="#onEditChangedSerieString" prefWidth="300.6666717529297" text="Nome" />
                 <TableColumn fx:id="numLibriSerie" onEditCommit="#onEditChangedSerieInt" prefWidth="104.66671752929688" text="NumeroLibri" />
                 <TableColumn fx:id="completataSerie" onEditCommit="#onEditChangedSerieBool" prefWidth="105.33331298828125" text="Completata" />
-            </columns>
-            <contextMenu>
-                <ContextMenu>
-                    <items>
-                        <MenuItem mnemonicParsing="false" onAction="#updateDao" text="Update" />
-                        <MenuItem mnemonicParsing="false" onAction="#deleteDao" text="Delete" />
-                    </items>
-                </ContextMenu>
-            </contextMenu>
-        </TableView>
-        <TableView fx:id="utenteTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
-            <columns>
-                <TableColumn fx:id="emailUtente" prefWidth="95.9999771118164" text="CodS" />
-                <TableColumn fx:id="passwordUtente" onEditCommit="#onEditChangedUtenteString" prefWidth="300.6666717529297" text="Password" />
-                <TableColumn fx:id="dataIscrizioneUtente" prefWidth="104.66671752929688" text="Data" />
-                <TableColumn fx:id="isAdminUtente" prefWidth="105.33331298828125" text="isAdmin" />
             </columns>
             <contextMenu>
                 <ContextMenu>
