--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStageAdmin.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/homeStageAdmin.fxml
@@ -26,7 +26,6 @@
         <TextField fx:id="idBarSearch" layoutX="298.0" layoutY="130.0" />
         <Button fx:id="buttonCerca" layoutX="607.0" layoutY="130.0" mnemonicParsing="false" onAction="#Select" text="Cerca" />
         <ComboBox fx:id="comboBoxRicerca" layoutX="450.0" layoutY="130.0" prefWidth="150.0" />
-        <Button fx:id="buttonMostra" disable="true" layoutX="660.0" layoutY="130.0" mnemonicParsing="false" text="Mostra" />
         <TableView fx:id="libroTableView" editable="true" fixedCellSize="0.0" layoutX="97.0" layoutY="182.0" prefHeight="535.0" prefWidth="700.0">
             <columns>
                 <TableColumn fx:id="isbnLibro" onEditCommit="#onEditChangedLibroString" prefWidth="95.9999771118164" text="ISBN" />
@@ -49,6 +48,7 @@
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#updateDao" text="Update" />
                         <MenuItem mnemonicParsing="false" onAction="#deleteDao" text="Delete" />
+                        <MenuItem fx:id="itemInsert1" mnemonicParsing="false" onAction="#insertDao" text="Insert" />
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -74,6 +74,7 @@
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#updateDao" text="Update" />
                         <MenuItem mnemonicParsing="false" onAction="#deleteDao" text="Delete" />
+                        <MenuItem fx:id="itemInsert2" mnemonicParsing="false" onAction="#insertDao" text="Insert" />
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -91,6 +92,7 @@
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#updateDao" text="Update" />
                         <MenuItem mnemonicParsing="false" onAction="#deleteDao" text="Delete" />
+                        <MenuItem fx:id="itemInsert3" mnemonicParsing="false" onAction="#insertDao" text="Insert" />
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -110,6 +112,7 @@
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#updateDao" text="Update" />
                         <MenuItem mnemonicParsing="false" onAction="#deleteDao" text="Delete" />
+                        <MenuItem fx:id="itemInsert4" mnemonicParsing="false" onAction="#insertDao" text="Insert" />
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -127,6 +130,7 @@
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#updateDao" text="Update" />
                         <MenuItem mnemonicParsing="false" onAction="#deleteDao" text="Delete" />
+                        <MenuItem fx:id="itemInsert5" mnemonicParsing="false" onAction="#insertDao" text="Insert" />
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -143,6 +147,7 @@
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#updateDao" text="Update" />
                         <MenuItem mnemonicParsing="false" onAction="#deleteDao" text="Delete" />
+                        <MenuItem fx:id="itemInsert6" mnemonicParsing="false" onAction="#insertDao" text="Insert" />
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -159,7 +164,7 @@
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#updateDao" text="Update" />
                         <MenuItem mnemonicParsing="false" onAction="#deleteDao" text="Delete" />
-                    </items>
+                        <MenuItem fx:id="itemInsert7" mnemonicParsing="false" onAction="#insertDao" text="Insert" />                    </items>
                 </ContextMenu>
             </contextMenu>
         </TableView>
@@ -173,7 +178,7 @@
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#updateDao" text="Update" />
                         <MenuItem mnemonicParsing="false" onAction="#deleteDao" text="Delete" />
-                    </items>
+                        <MenuItem fx:id="itemInsert8" mnemonicParsing="false" onAction="#insertDao" text="Insert" />                    </items>
                 </ContextMenu>
             </contextMenu>
         </TableView>
@@ -187,7 +192,7 @@
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#updateDao" text="Update" />
                         <MenuItem mnemonicParsing="false" onAction="#deleteDao" text="Delete" />
-                    </items>
+                        <MenuItem fx:id="itemInsert9" mnemonicParsing="false" onAction="#insertDao" text="Insert" />                    </items>
                 </ContextMenu>
             </contextMenu>
         </TableView>
@@ -201,7 +206,7 @@
                     <items>
                         <MenuItem mnemonicParsing="false" onAction="#updateDao" text="Update" />
                         <MenuItem mnemonicParsing="false" onAction="#deleteDao" text="Delete" />
-                    </items>
+                        <MenuItem fx:id="itemInsert10" mnemonicParsing="false" onAction="#insertDao" text="Insert" />                    </items>
                 </ContextMenu>
             </contextMenu>
         </TableView>
