--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/infoUserStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/infoUserStage.fxml
@@ -64,7 +64,7 @@
          <contextMenu>
             <ContextMenu>
               <items>
-                <MenuItem mnemonicParsing="false" text="Vai Alla Pagina Informativa Serie" />
+                <MenuItem mnemonicParsing="false" onAction="#goToPaginaInformativaSerie" text="Vai Alla Pagina Informativa Serie" />
                   <MenuItem mnemonicParsing="false" onAction="#eliminaPreferito" text="Elimina Dai preferiti" />
               </items>
             </ContextMenu>
